--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
@@ -2,8 +2,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:pe="http://primefaces.org/ui/extensions">
+	xmlns:p="http://primefaces.org/ui">
 
 	<p:panel id="inputArea"
 		style="border: 0px; background: transparent; height: auto">
