--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/rightPanel.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/rightPanel.xhtml
@@ -62,7 +62,7 @@
                             </p:column>
 
                             <p:column styleClass="Wid60 TexAlLeft"
-                                      resizable="true" headerText="Asset"><!-- ROHIT's CHANGE -->
+                                      resizable="true" headerText="Class"><!-- ROHIT's CHANGE -->
                                 <h:outputText value="#{assetList.asset}"/>
                             </p:column>
                             <p:column styleClass="Wid35 num-text-align TexAlRight"
