--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -219,8 +219,8 @@ tax or estate planning. Please consult an estate planner for details regarding t
 								<div class="EmptyBox5"></div>
 								<p:inputNumber styleClass="Wid85 CustomWidthFA2 FS14 Mar5 sharePercentageInput"
 											   value="#{tdcto.tdMasterData.tmpBenefiaciaryDetail.sharePerc}"
-											   minValue="-100.999" maxValue="100"
-											   decimalPlaces="0" emptyValue="zero">
+											   maxValue="100"
+											   decimalPlaces="0">
 								</p:inputNumber>
 							</div>
 						</div>
