--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -294,14 +294,14 @@
                                 </div>
                                 <div class="Container32 CustomWidthFA-Responsive">
                                     <label Class="Container100"
-                                           style="text-align: left !important; font-weight: bold !important;">Name of delivery firm *</label>
+                                           style="text-align: left !important; font-weight: bold !important;">Name of delivering firm *</label>
 
                                     <div class="EmptyBox5"></div>
                                     <p:selectOneMenu styleClass="formpageDropdown FundAccouintDropdownUI"
                                                      value="#{tdcto.tdMasterData.acatDetails.contraFirmList}"
                                                      style="width: 100%!important; box-sizing: border-box; min-width: auto!important;">
                                         <p:ajax />
-                                        <f:selectItem itemLabel="Select the Delivery Firm" itemValue=""
+                                        <f:selectItem itemLabel="Select name of delivering firm" itemValue=""
                                                       noSelectionOption="true"/>
                                         <f:selectItem itemValue="CURICLEAR" itemLabel="Curian Clearing" />
                                         <f:selectItem itemValue="EDWAJONE" itemLabel="Edward Jones" />
