--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -12,7 +12,10 @@
             </h3>
 
             <h:inputHidden value="#{tcmpb.riskCalculator.ans4}"/>
-
+            <div class="EmptyBox10"></div>
+            <div class="TexAlCenter">
+                <strong>Select one of the risk levels shown below</strong>
+            </div>
             <div class="EmptyBox20"></div>
             <div class="Container100 TexAlCenter">
 
