--- a/tcm/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
@@ -25,19 +25,20 @@
 						<div class="EmptyBox10"></div>
 						<div class="ContainerIndent">
 							<h3 class="FsRes14">
-                                You will receive two emails from DocuSign, a leading
+                                You will receive an email from DocuSign, a leading
                                 secure e-signature company, with forms requiring your
                                 electronic signature:
-                                1) TD Ameritrade Institutional Application Documents and
-                                2) Building Benjamins / Tradition Capital Management Advisory
-                                Agreement with other required disclosures.
+                                1) Building Benjamins / Tradition Capital Management Advisory
+                                Agreement with other required disclosures and
+                                2) TD Ameritrade Institutional Application Documents.
 
                             </h3>
 
 						</div>
 						<div class="ContainerIndent">
 							<h4 class="FsRes13">
-                                (Note : If it is a joint account then both account holders will receive an email for signature)”
+                                (Note : If it is a joint account application, then once signature process is completed by the primary account holder
+                                then, second reminder will be sent to joint account holder's email address for their signature)”
                             </h4>
 						</div>
 						<div class="EmptyBox10"></div>
