--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -175,7 +175,7 @@
                 <div class="Container100 MarTop20" style="margin: 10px 10px;">
                     <p:commandLink styleClass="UI-prevButtonFA Fleft"
                                    actionListener="#{tdcto.prevPage}"
-                                   update="@form"  immediate="true"/>
+                                   update=":ctoForm:tdaccordian"  process="@this"/>
 
                     <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                    actionListener="#{tdcto.nextPage}"
@@ -359,7 +359,7 @@
                 <div class="Container100 MarTop20" style="margin: 10px 10px;">
                     <p:commandLink styleClass="UI-prevButtonFA Fleft"
                                    actionListener="#{tdcto.prevPage}"
-                                   update="@form"   immediate="true"/>
+                                   update=":ctoForm:tdaccordian"  process="@this"/>
 
                     <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                    actionListener="#{tdcto.nextPage}"
