--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -245,7 +245,8 @@ tax or estate planning. Please consult an estate planner for details regarding t
 			</p:panel>
 			<div class="Container100 MarTop20" style="margin: 10px 10px;">
 				<p:commandLink styleClass="UI-prevButtonFA Fleft"
-							   actionListener="#{tdcto.prevPage}" update="@form" />
+							   actionListener="#{tdcto.prevPage}"
+                               update=":ctoForm:tdaccordian"  process="@this"/>
 
 				<p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
 							   actionListener="#{tdcto.nextPage}" update="@form" />
