--- a/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
@@ -121,7 +121,7 @@
 
             <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                            actionListener="#{tdcto.nextPage}"
-                           update="@form"/>
+                           update=":ctoForm:tdaccordian"/>
         </div>
         </div>
         
@@ -244,7 +244,7 @@
 
             <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                            actionListener="#{tdcto.nextPage}"
-                           update="@form"/>
+                           update=":ctoForm:tdaccordian"/>
         </div>
         </div>
         
