--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -249,7 +249,8 @@ tax or estate planning. Please consult an estate planner for details regarding t
                                update=":ctoForm:tdaccordian"  process="@this"/>
 
 				<p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-							   actionListener="#{tdcto.nextPage}" update="@form" />
+							   actionListener="#{tdcto.nextPage}"
+                               update=":ctoForm:tdaccordian" />
 			</div>
 		</div>
 
