--- a/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/employment.xhtml
@@ -192,7 +192,7 @@
 
             <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                            actionListener="#{tdcto.nextPage}"
-                           update="@form"/>
+                           update=":ctoForm:tdaccordian"/>
         </div>
         </div>
     </p:panel>
@@ -361,7 +361,7 @@
 
                 <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                actionListener="#{tdcto.nextPage}"
-                               update="@form"/>
+                               update=":ctoForm:tdaccordian"/>
             </div>
             </div>
 
