--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -553,7 +553,7 @@
                                    style="background-position-x: 50px!important;"
                                    actionListener="#{tdcto.nextPage}"
                                    process="@parent"
-                                   update="@form"/>
+                                   update=":ctoForm:tdaccordian"/>
 
                 </div>
 
@@ -771,7 +771,7 @@
                                        update=":ctoForm:tdaccordian"  process="@this"/>
                         <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                        actionListener="#{tdcto.nextPage}"
-                                       update="@form"/>
+                                       update=":ctoForm:tdaccordian"/>
 
                         <!--   <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                   rendered="false"/> -->
