--- a/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
@@ -122,7 +122,7 @@
                         </div>
                         <div class="Container100 saveNopenBtn" style="text-align: center;">
                             <p:commandButton value="Save and Open Account" ajax="true"
-                                             update="@form"
+                                             update=":ctoForm:tdaccordian"
                                              actionListener="#{tdcto.openAccount}"
                                              styleClass="text-align: center" />
 
