--- a/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
@@ -211,7 +211,8 @@
                             update=":ctoForm:tdaccordian"  process="@this"/>
 
 						<p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-							actionListener="#{tdcto.nextPage}" update="@form" />
+							actionListener="#{tdcto.nextPage}"
+                            update=":ctoForm:tdaccordian" />
 					</div>
 				</p:panel>
 			</div>
