--- a/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -157,8 +157,7 @@
 
                 <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                actionListener="#{tdcto.nextPage}"
-                               process="@parent"
-                               update="@form"/>
+                               update=":ctoForm:tdaccordian"/>
 
             </div>
 
