--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -179,7 +179,7 @@
 
                     <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                    actionListener="#{tdcto.nextPage}"
-                                   update="@form"  />
+                                   update=":ctoForm:tdaccordian"  />
                 </div>
             </p:panel>
         </p:tab>
@@ -363,7 +363,7 @@
 
                     <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
                                    actionListener="#{tdcto.nextPage}"
-                                   update="@form"  />
+                                   update=":ctoForm:tdaccordian"  />
                 </div>
             </p:panel>
 
